@@ -18,7 +18,7 @@ ACE_RCSID (ForwardRequest,
            server,
            "$Id$")
 
-const char *ior_file = 0;
+const ACE_TCHAR *ior_file = 0;
 
 int
 parse_args (int argc, ACE_TCHAR *argv[])
