@@ -1,3 +1,10 @@
+Tue Sep 30 18:24:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * orbsvcs/examples/FaultTolerance/RolyPoly/server.cpp
+        * orbsvcs/tests/Bug_2925_Regression/client.cpp
+        * orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/server.cpp
+          ACE_TCHAR fixes
+
 Tue Sep 30 18:03:45 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/Event/EC_Default_Factory.cpp
